--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/ExternalWebhookReceiverAPI.Domain.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/ExternalWebhookReceiverAPI.Domain.csproj
@@ -12,6 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Common\Resources\HotmartMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>HotmartMessages.resx</DependentUpon>
+    </Compile>
     <Compile Update="Common\Resources\UserMessages.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -20,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Common\Resources\HotmartMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>HotmartMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Common\Resources\UserMessages.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>UserMessages.Designer.cs</LastGenOutput>
