--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Infrastructure/ExternalWebhookReceiverAPI.Infrastructure.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Infrastructure/ExternalWebhookReceiverAPI.Infrastructure.csproj
@@ -12,11 +12,12 @@
 
 	<ItemGroup>
 		<Folder Include="Config\" />
-		<Folder Include="Scripts\" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.7" />
 	</ItemGroup>
 
