chore: config program e conncetionstrings

--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionPostgres": "Host=localhost;Port=5433;Database=postgres;Username=postgres;Password=hash12345678@@;",
-    "DefaultConnectionSqlServer": "Server=localhost,1433;Database=ApiCatalogDb;User Id=sa;Password=Hash12345678@@;TrustServerCertificate=True;"
+    "DefaultConnectionPostgres": "",
+    "DefaultConnectionSqlServer": "Server=localhost,1433;Database=tc_portfolio;User Id=sa;Password=Hash12345678@@;TrustServerCertificate=True;"
   },
   "AuthorizationExternalWebhook": {
     "Hotmart": "x-hotmart-hottok",
