--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/ExternalWebhookReceiverAPI.API.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/ExternalWebhookReceiverAPI.API.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.7" />
+		<PackageReference Include="Scrutor" Version="6.1.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	</ItemGroup>
   <ItemGroup>
