--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Application/ExternalWebhookReceiverAPI.Application.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Application/ExternalWebhookReceiverAPI.Application.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.7" />
+    <PackageReference Include="Scrutor" Version="6.1.0" />
   </ItemGroup>
 
 </Project>
