--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.CrossCutting/ExternalWebhookReceiverAPI.CrossCutting.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.CrossCutting/ExternalWebhookReceiverAPI.CrossCutting.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.7" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.7" />
+    <PackageReference Include="Scrutor" Version="6.1.0" />
   </ItemGroup>
 
 </Project>
