--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/ExternalWebhookReceiverAPI.Domain.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/ExternalWebhookReceiverAPI.Domain.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.7" />
+		<PackageReference Include="Scrutor" Version="6.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
