--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Infrastructure/ExternalWebhookReceiverAPI.Infrastructure.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Infrastructure/ExternalWebhookReceiverAPI.Infrastructure.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.7" />
+		<PackageReference Include="Scrutor" Version="6.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
