chore: ajustes csproj

--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/ExternalWebhookReceiverAPI.Domain.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/ExternalWebhookReceiverAPI.Domain.csproj
@@ -13,6 +13,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\CommonSolution\CommonSolution.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Compile Update="Common\Resources\HotmartMessages.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
@@ -34,6 +38,12 @@
 			<Generator>PublicResXFileCodeGenerator</Generator>
 			<LastGenOutput>UserMessages.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Interfaces\Common\" />
+	  <Folder Include="Interfaces\DAOs\" />
+	  <Folder Include="Interfaces\Repositories\" />
 	</ItemGroup>
 
 
