--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Application/ExternalWebhookReceiverAPI.Application.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Application/ExternalWebhookReceiverAPI.Application.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Scrutor" Version="6.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Common\" />
+  </ItemGroup>
+
 </Project>
