feat: add DefaultUser

--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
@@ -7,6 +7,11 @@
     "Hotmart": "x-hotmart-hottok",
     "Udemy": "auth-udemy"
   },
+  "DefaultUser": {
+    "Identifier": "df39f3cb-67da-4b76-a906-806c153ba002",
+    "DefaultUserId": 2,
+    "DefaultUserName": "External Webhook Receiver API"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
