feat: add Elastic logging

--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
@@ -3,6 +3,10 @@
     "DefaultConnectionPostgres": "",
     "DefaultConnectionSqlServer": "Server=localhost,1433;Database=tc_portfolio;User Id=sa;Password=Hash12345678@@;TrustServerCertificate=True;"
   },
+  "LoggingOptions": {
+    "Url": "http://localhost:9200",
+    "IndexName": "external-webhook-receiver-logs"
+  },
   "AuthorizationExternalWebhook": {
     "Hotmart": "x-hotmart-hottok",
     "Udemy": "auth-udemy"
