chore: add resources

--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/ExternalWebhookReceiverAPI.Domain.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.Domain/ExternalWebhookReceiverAPI.Domain.csproj
@@ -22,6 +22,11 @@
 	    <AutoGen>True</AutoGen>
 	    <DependentUpon>HotmartMessages.resx</DependentUpon>
 	  </Compile>
+	  <Compile Update="Common\Resources\ExternalWebhookReceiverMessages.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>ExternalWebhookReceiverMessages.resx</DependentUpon>
+	  </Compile>
 	  <Compile Update="Common\Resources\UserMessages.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
@@ -33,6 +38,10 @@
 		<EmbeddedResource Update="Common\Resources\HotmartMessages.resx">
 			<Generator>PublicResXFileCodeGenerator</Generator>
 			<LastGenOutput>HotmartMessages.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Common\Resources\ExternalWebhookReceiverMessages.resx">
+		  <Generator>PublicResXFileCodeGenerator</Generator>
+		  <LastGenOutput>ExternalWebhookReceiverMessages.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
 		<EmbeddedResource Update="Common\Resources\UserMessages.resx">
 			<Generator>PublicResXFileCodeGenerator</Generator>
