--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/ExternalWebhookReceiverAPI.API.csproj
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/ExternalWebhookReceiverAPI.API.csproj
@@ -26,4 +26,8 @@
 		<ProjectReference Include="..\..\CommonSolution\CommonSolution.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Middlewares\" />
+	</ItemGroup>
+
 </Project>
