infra: deploy config render

--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
@@ -22,13 +22,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Jwt": {
-    "SecretKey": "yRqGLw63L7mp1S8BJqRyyL26DtAwooV8",
-    "RefreshKey": "HAa-;j&O}:Qyjys$oHAW;qc+L{,j8f;)",
-    "Issuer": "APICatalog",
-    "Audience": "APICatalogUsers",
-    "AccessTokenExpirationMinutes": 360,
-    "RefreshTokenExpirationDays": 7
-  }
+  "AllowedHosts": "*"
 }
