--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionPostgres": "",
-    "DefaultConnectionSqlServer": "Server=localhost,1433;Database=tc_portfolio;User Id=sa;Password=Hash12345678@@;TrustServerCertificate=True;"
+    "PostgresConnection": "Host=localhost;Port=1722;Database=db_info-products;Username=devuser;Password=devpass",
+    "MongoConnection": "mongodb://localhost:27017",
+    "RedisConnection": "localhost:6379"
   },
   "LoggingOptions": {
     "Url": "http://localhost:9200",
