chore: ajustes de config

--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
@@ -23,5 +23,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AppSettings": {
+    "UseCache": "False",
+    "UpdateRealtimeCache": "False",
+    "CacheExpirationInMinutes": 5
+  },
   "AllowedHosts": "*"
 }
