chore: ajustes config

--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=1722;Database=db_info-products;Username=devuser;Password=devpass",
-    "MongoConnection": "mongodb://localhost:27017",
-    "RedisConnection": "localhost:6379"
+    "PostgresConnection": "",
+    "MongoConnection": "",
+    "RedisConnection": ""
   },
   "LoggingOptions": {
-    "Url": "http://localhost:9200",
+    "Url": "",
     "IndexName": "external-webhook-receiver-logs"
   },
   "AuthorizationExternalWebhook": {
