feat: add config app settings

--- a/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
+++ b/ExternalWebhookReceiverAPI/ExternalWebhookReceiverAPI.API/appsettings.json
@@ -23,10 +23,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "LoggingProvidersOptions": {
+    "EnabledProviders": [
+      "Elastic",
+      "MongoDb"
+    ]
+  },
   "AppSettings": {
     "UseCache": "False",
     "UpdateRealtimeCache": "False",
-    "CacheExpirationInMinutes": 5
+    "CacheExpirationInMinutes": 5,
+    "XmlFilePath": "C:\\Temp\\Logs\\",
+    "DefaultLogName": "DefaultLog_ExternalWebhookReceiverAPI"
   },
   "AllowedHosts": "*"
 }
